--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ function myFunction() {
                 Improved concentration and memory<br>
                 Preparedness to face the world</p>
               </div>
-              <div class="col-lg-4 col-md-4 col-sm-4 pcenter">
+              <div class="col-lg-4 col-md-4 col-sm-6 tcenter pcenter">
                      <img src="1.png" class="img-thumbnail" id="no">
               </div>
             </div>
@@ -110,7 +110,7 @@ function myFunction() {
                 Improved respiration, energy and vitality<br>
                 Reduces stress and anxiety</p>
               </div>
-              <div class="col-lg-4 col-md-4 col-sm-4 pcenter">
+              <div class="col-lg-4 col-md-4 col-sm-6 tcenter pcenter">
                      <img src="2.png" class="img-thumbnail" id="no">
               </div>
             </div>
@@ -135,7 +135,7 @@ function myFunction() {
                 Multitude of course choices for selection<br>
                 Hands-on training & guidance by field experts</p>
               </div>
-              <div class="col-lg-4 col-md-4 col-sm-4 pcenter">
+              <div class="col-lg-4 col-md-4 col-sm-6 tcenter pcenter">
                      <img src="3.png" class="img-thumbnail" id="no">
               </div>
             </div>
@@ -159,7 +159,7 @@ function myFunction() {
                 Enhanced team spirit & new friendships<br>
                 Self-awareness of hidden potential & talents</p>
               </div>
-              <div class="col-lg-4 col-md-4 col-sm-4 pcenter">
+              <div class="col-lg-4 col-md-4 col-sm-6 tcenter pcenter">
                      <img src="4.png" class="img-thumbnail" id="no">
               </div>
             </div>
@@ -189,7 +189,7 @@ function myFunction() {
                   <li>Improved standards in teaching, assessment & classroom management</li>
                </ul>
               </div>
-              <div class="col-lg-4 col-md-4 col-sm-4 pcenter">
+              <div class="col-lg-4 col-md-4 col-sm-6 tcenter pcenter">
                      <img src="5.png" class="img-thumbnail" id="no">
               </div>
             </div>
@@ -221,7 +221,7 @@ function myFunction() {
                   <li>Guidance on parenting by experts in the field.</li>
                </ul>
               </div>
-              <div class="col-lg-4 col-md-4 col-sm-4 pcenter">
+              <div class="col-lg-4 col-md-4 col-sm-6 tcenter pcenter">
                      <img src="6.png" class="img-thumbnail" id="no">
               </div>
             </div>
